* Make /list open the channel list panel * Fix notice to handle IDENTIFY-MSG correctly

BUG:111234

svn path=/trunk/extragear/network/konversation/; revision=451824